2009-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated doc.
	* src/MSEHandshake.cc

2009-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed _acceptFeatures and its accessor functions from
	RequestGroup since they are not used practically.
	* src/HttpRequestCommand.cc
	* src/RequestGroup.cc
	* src/RequestGroup.h	

2009-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed member _maxTries from RequestGroup class to avoid
	duplicate option value. Those classes who refer this variable
	should use option value of PREF_MAX_TRIES directly.
	* src/AbstractCommand.cc
	* src/RequestGroup.cc
	* src/RequestGroup.h
	* src/TrackerWatcherCommand.cc

2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	* Release 1.4.1

2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compiler warnings on netbsd
	* src/DHTConnectionImpl.cc
	* src/PeerListenCommand.cc
	* src/PeerSessionResource.cc
	* src/SegmentMan.cc

2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Ukrainian translation. Thanks to all translators.
	* po/uk.po

2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.4.1.
	* configure.ac

2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added unit tests for strjoin, strconcat and strappend.
	* test/a2functionalTest.cc

2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten strconcat and strappend using operator+ instead of
	append().
	* src/a2functional.h

2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Compile bencode.cc and BencodeTest.cc only if BitTorrent support
	is enabled.
	* src/Makefile.am
	* test/Makefile.am

2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added countSeeder() function which counts seeder in the given
	iterator range. Use it in ConsoleStatCalc and XmlRpcMethodImpl.
	* src/ConsoleStatCalc.cc