@@ -2419,10 +2419,11 @@ GID
 and its element is URI which is of type string. URI should be
 percent-encoded.  <em>options</em> is of type struct and its members are a
 pair of option name and value. See <strong>Options</strong> below for more details.
-If <em>position</em> is given as an integer, the new download is inserted at
-<em>position</em> in the waiting queue. If <em>position</em> is not given or
-<em>position</em> is larger than the size of the queue, it is appended at the
-end of the queue.  This method returns GID of registered download.</p></div>
+If <em>position</em> is given as an integer starting from 0, the new download
+is inserted at <em>position</em> in the waiting queue. If <em>position</em> is not
+given or <em>position</em> is larger than the size of the queue, it is
+appended at the end of the queue.  This method returns GID of
+registered download.</p></div>
 <div class="paragraph"><p><strong>aria2.addTorrent</strong> <em>torrent[, uris[, options[, position]]]</em></p></div>
 <div class="paragraph"><p>This method adds BitTorrent download by uploading .torrent file.
 <em>torrent</em> is of type base64 which contains Base64-encoded .torrent
@@ -2431,20 +2432,20 @@ string. <em>uris</em> is used for Web-seeding. Note that <em>uris</em> is ignore
 specified torrent is a multi-file torrent.  <em>options</em> is of type
 struct and its members are a pair of option name and value. See
 <strong>Options</strong> below for more details.  If <em>position</em> is given as an
-integer, the new download is inserted at <em>position</em> in the waiting
-queue. If <em>position</em> is not given or <em>position</em> is larger than the
-size of the queue, it is appended at the end of the queue.  This
-method returns GID of registered download.</p></div>
+integer starting from 0, the new download is inserted at <em>position</em> in
+the waiting queue. If <em>position</em> is not given or <em>position</em> is larger
+than the size of the queue, it is appended at the end of the queue.
+This method returns GID of registered download.</p></div>
 <div class="paragraph"><p><strong>aria2.addMetalink</strong> <em>metalink[, options[, position]]</em></p></div>
 <div class="paragraph"><p>This method adds Metalink download by uploading .metalink file.
 <em>metalink</em> is of type base64 which contains Base64-encoded .metalink
 file.  <em>options</em> is of type struct and its members are a pair of
 option name and value. See <strong>Options</strong> below for more details.  If
-<em>position</em> is given as an integer, the new download is inserted at
-<em>position</em> in the waiting queue. If <em>position</em> is not given or
-<em>position</em> is larger than the size of the queue, it is appended at the
-end of the queue.  This method returns array of GID of registered
-download.</p></div>
+<em>position</em> is given as an integer starting from 0, the new download is
+inserted at <em>position</em> in the waiting queue. If <em>position</em> is not
+given or <em>position</em> is larger than the size of the queue, it is
+appended at the end of the queue.  This method returns array of GID of
+registered download.</p></div>
 <div class="paragraph"><p><strong>aria2.remove</strong> <em>gid</em></p></div>
 <div class="paragraph"><p>This method removes the download denoted by <em>gid</em>. <em>gid</em> is of type
 string. If specified download is in progress, it is stopped at
@@ -3172,7 +3173,7 @@ files in the program, then also delete it here.</p></div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2009-06-06 23:28:59 JST
+Last updated 2009-06-14 16:20:17 JST
 </div>
 </div>
 </body>
