@@ -1044,10 +1044,11 @@ This method adds new HTTP(S)/FTP download.  'uris' is of type array
 and its element is URI which is of type string. URI should be
 percent-encoded.  'options' is of type struct and its members are a
 pair of option name and value. See *Options* below for more details.
-If 'position' is given as an integer, the new download is inserted at
-'position' in the waiting queue. If 'position' is not given or
-'position' is larger than the size of the queue, it is appended at the
-end of the queue.  This method returns GID of registered download.
+If 'position' is given as an integer starting from 0, the new download
+is inserted at 'position' in the waiting queue. If 'position' is not
+given or 'position' is larger than the size of the queue, it is
+appended at the end of the queue.  This method returns GID of
+registered download.
 
 *aria2.addTorrent* 'torrent[, uris[, options[, position]]]'
 
@@ -1058,10 +1059,10 @@ string. 'uris' is used for Web-seeding. Note that 'uris' is ignored if
 specified torrent is a multi-file torrent.  'options' is of type
 struct and its members are a pair of option name and value. See
 *Options* below for more details.  If 'position' is given as an
-integer, the new download is inserted at 'position' in the waiting
-queue. If 'position' is not given or 'position' is larger than the
-size of the queue, it is appended at the end of the queue.  This
-method returns GID of registered download.
+integer starting from 0, the new download is inserted at 'position' in
+the waiting queue. If 'position' is not given or 'position' is larger
+than the size of the queue, it is appended at the end of the queue.
+This method returns GID of registered download.
 
 *aria2.addMetalink* 'metalink[, options[, position]]'
 
@@ -1069,11 +1070,11 @@ This method adds Metalink download by uploading .metalink file.
 'metalink' is of type base64 which contains Base64-encoded .metalink
 file.  'options' is of type struct and its members are a pair of
 option name and value. See *Options* below for more details.  If
-'position' is given as an integer, the new download is inserted at
-'position' in the waiting queue. If 'position' is not given or
-'position' is larger than the size of the queue, it is appended at the
-end of the queue.  This method returns array of GID of registered
-download.
+'position' is given as an integer starting from 0, the new download is
+inserted at 'position' in the waiting queue. If 'position' is not
+given or 'position' is larger than the size of the queue, it is
+appended at the end of the queue.  This method returns array of GID of
+registered download.
 
 *aria2.remove* 'gid'
 
